# idea_explain

./: .gitignore  PRODUCTION.md  Project.md  README.md  TOON_BASE.md  app.py  check.py  program_base.md  pyproject.toml  pytest.ini  requirements.txt  rules.md
.github/workflows/: ci.yml
.specstory/history/: 2026-01-21_01-37Z-@project-md-@toon-base-md-@program-base-md-に基づきリアルタイムなフローチャートを可視化するstreamlitアプリケーションを考えている。この実装計画を中立な視点で評価してください。正直に評価して隠さないでください。不足していると思うことについても正直に教えてください。.md  2026-01-21_21-57Z-実装計画書の清書.md  2026-01-25_09-59Z-マーメイド図の整理.md
core/: config.py  exceptions.py  flow_extractor.py  flow_merger.py  history_mgr.py  llm_client.py  logging_config.py  mermaid_parser.py  schemas.py  toon_parser.py
core/persistence/: __init__.py  factory.py  local_store.py  postgres_store.py  types.py  user_key.py
core/ui/: __init__.py  auth.py  persistence.py  rate_limit.py
frontend/: index.html
storage/sessions/: default_session.json  flow_md.json
storage/toon_files/: default_session.md  flow_md.md
tests/: test_flow_extractor.py  test_flow_merger.py  test_history_mgr.py  test_llm_client.py  test_mermaid_parser.py  test_persistence.py  test_schemas.py  test_toon_parser.py  test_ui_helpers.py
